2016-06-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r25483.

	* src/sighand.c (print_trace): Handle write return correctly, as it may
	only write part of the string.

2016-06-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (hash_fill_deps): Remove backported part from
	r25417.

2016-06-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r25481.

	* src/sighand.c (print_trace): Add loop around write() call to handle
	signal interrupts. Don't return on error.

2016-06-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r25470.

	* src/log.c (log_get_fd): New function.

	* src/log.h: Add new function prototype.

	* src/sighand.c (print_trace, sighand_segv): Make function
	async-signal-safe.

2016-05-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r25384, r25394 and r25397.

	* src/attack.c (attack_start): Fix memory leak.

	* src/nasl_plugins.c (nasl_plugin_launch): Fix memory leak.

	* src/pluginscheduler.c (hash_fill_deps): Fix memory leak.

2016-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r24812.

	* src/openvassd.c (openvassd_defaults): Add timeout_retry preference.

	* doc/openvassd.8.in: Update documentation.

2016-03-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r24613.

	* src/openvassd.c (openvassd_defaults): Add scanner_plugins_timeout
	preference.

	* src/pluginlaunch.c (plugin_launch): Use scanner_plugins_timeout as the
	default value for scanner plugins.

	* CMakeLists.txt: Add SCANNER_NVT_TIMEOUT variable.

	* doc/openvassd.8.in: Update documentation.

2015-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.6.

2015-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.5 release.

	* CHANGES: Updated.

2015-12-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r23991.
